...
        view?.loginLabel.text = profile.username
        view?.descriptionLabel.text = profile.bio
    }
    
    func makeAlert() -> UIAlertController {
        let alert = UIAlertController(
            title: "До встречи!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Нет",
                                      style: .cancel))
        
        alert.addAction(UIAlertAction(title: "Да",
                                      style: .default, handler: { [weak self] _ in
            guard let self = self else { return }
            logout()
        }))
        return alert
    }
...
